# Noctyrium

./: .env.example  .gitattributes  .gitignore  .vercelignore  CHANGELOG.md  Package.swift  README.md  current_version.txt  overview.json  overview_architecture.puml  package-lock.json  package.json  vercel.json
00 📥 Inbox - Need Work Look Over/To Sort/: BSCE_Batch1_Top500_Clinical_Correlates_Draft_Cards.xlsx  BSCE_Clinical_Correlates_Deep_Sweep.xlsx  BSCE_Clinical_Correlates_Information_Atlas_v10_CLEAN_SOURCE.xlsx  Medical_Brain_Builder_Deck.pptx  Spring 2026 Term 2 Exam Mastery Assignment-Grenada .xlsx  V0.01:CSS:Cursor effect:Blue Glassmorphism:Lustrous effect.docx  v0.01:Back:Cursor effect:Blue Glassmorphism:Lustrous effect.docx  v0.01:Front:Cursor effect:Blue Glassmorphism:Lustrous effect.docx  ~$ Clinical Tie-inActive Recall.docx  ~$ Medical School #1 - Shadowing Surgeon Orthopedics #1.docx  ~$A 2 Notes.docx  ~$Rubric.docx  (+18 more)
03 🧠 STEP 1/: Sketchy and Pathoma Video Log.xlsx
06 📊 Summaries and Sheets/: High-Yield Review Video Playlists.docx
09 Admin/: User Manual - Medical School Hub.md
api/: ai.ts  data.ts  feedback.ts  health.ts  user.ts
docs/: ALPHA-RELEASE.md  FIELD-NOTES.md  PRODUCTIVITY-ARCHITECTURE.md  UPDATE-POLICY.md
scripts/: build_app.sh  package.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_local_vault.sql
src-tauri/src/: lib.rs  main.rs
web/: .gitignore  .vercelignore  README.md  embed-example.html  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
(+374 files in other folders)
