[package]
name = "noctyrium"
version = "0.1.0-alpha.1"
description = "Noctyrium desktop shell"
authors = ["Noctyrium"]
license = "UNLICENSED"
repository = "https://github.com/jaclose/Noctyrium"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "noctyrium_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
